# MachineLearningCompiler-Roadmap

./: .gitignore  LICENSE  README.md
Stage1_Accelerator/: README.md
Stage1_Accelerator/week1-roofline/: README.md  roofline_theory.py
Stage1_Accelerator/week2-cpu-gpu/: CMakeLists.txt  analysis.md  avx_matmul.cpp
Stage1_Accelerator/week3-systolic/: README.md  systolic_extend.py
Stage1_Accelerator/week4-architectures/: comparison.md  eyeriss_sim.py
Stage1_Accelerator/week6-memory-tiling-npu/: README.md  flash_attention.py  summary.md
stage1_Accelerator/: .gitignore  README.md  requirements.txt
stage1_Accelerator/week1-roofline/: CMakeLists.txt  README.md  memcpy_bench.cpp  roofline_measured.py  roofline_theory.py
stage1_Accelerator/week2-cpu-gpu/: CMakeLists.txt  README.md  analysis.md  cuda_tiling_matmul.html  matmul.cu  matmul_visualization.md
stage1_Accelerator/week3-systolic/: README.md  analysis.md  systolic_extend.py  systolic_sim.py  systolic_sim_doc.md  systolic_sim_visualization.html
stage1_Accelerator/week4-architectures/: README.md  comparison.md  eyeriss_sim.py  eyeriss_sim_cycle.py  eyeriss_visualization.html  tt_metalium_notes.md
stage1_Accelerator/week5-quantization/: README.md  precision_stability.py  quantize.py  quantize_resnet18.py
stage1_Accelerator/week6-memory-tiling-npu/: CMakeLists.txt  matmul_tiled_3level.cu
stage1_Accelerator/week6-memory-tiling-npu/luckfox/: README.md  convert_rknn.py
